--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "experimentalDecorators": true,
       "preserveConstEnums": true,
       "suppressImplicitAnyIndexErrors": true,
+      "moduleResolution": "node"
     },
     "include": [
       "./app/*","./app/decs.d.ts"
