--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       "preserveConstEnums": true,
       "suppressImplicitAnyIndexErrors": true,
       "moduleResolution": "node",
-      "lib": [ "DOM", "ES5"],
+      "lib": [ "DOM", "ES5", "ES2015"],
       "outDir": "./app/dist",
       
     },
